--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,10 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
+        debug: true  # 添加 debug 模式
         script: |
+          whoami
+          echo "Starting deployment..."
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/docker-github-actions-demo:latest
           docker stop $(docker ps -q) || true
